--- a/SON/index.html
+++ b/SON/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="index.css" />
     <script src="index.js" defer></script>
-</head>
-<body>
-    <section class="loading">
-        <div class="loadingGreenBox"></div>
-        <p class="loadingGreenBoxText">Life of LiNE</p>
+  </head>
+  <body>
+    <section id="loading" class="loading">
+      <div id="loadingGreenBox" class="loadingGreenBox">
+        <p id="loadingGreenBoxText" class="loadingGreenBoxText">Life of LiNE</p>
+      </div>
+      <div id="loadingTransparentBox" class="loadingTransparentBox"></div>
     </section>
-</body>
+  </body>
 </html>
