--- a/index.html
+++ b/index.html
@@ -4,8 +4,87 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="reset.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
+      rel="stylesheet"
+    />
+    <!--SON-->
+    <link rel="stylesheet" href="SON/index.css" />
+    <script src="SON/index.js" defer></script>
+    <!--LEE-->
+    <link rel="stylesheet" href="LEE/index.css" />
+    <script src="LEE/index.js" defer></script>
+    <!--PARK-->
+    <link rel="stylesheet" href="PARK/css/index.css" />
+    <link rel="stylesheet" href="PARK/css/service__header.css" />
+    <link rel="stylesheet" href="PARK/css/service__category.css" />
+    <script src="index.js"></script>
   </head>
   <body>
-    <span>test</span>
+    <!--로딩 화면(SON)-->
+    <section class="loading">
+      <div class="loadingGreenBox"></div>
+      <p class="loadingGreenBoxText">Life of LiNE</p>
+    </section>
+    <!--섹션 2(LEE)-->
+    <div class="service">
+      <div class="line_news">
+        <div class="text_area">
+          <h3>LINE NEWS</h3>
+          <span>지금 화제가 되고 있는 <br />글로벌 뉴스</span>
+          <div class="desc">
+            바쁜 일과 중에도 글로벌 이슈를 알고 싶다면 라인 뉴스를 <br />
+            추천합니다. 정치, 경제부터 연예계 소식까지 모든 장르의 뉴스를
+            <br />전하는 라인 뉴스에는 '알고 싶은 정보'가 가득합니다.
+          </div>
+          <div class="site_link">
+            <i class="ri-external-link-line"></i>자세히 보기
+          </div>
+        </div>
+        <div class="image_area">
+          <picture><img src="line_img.png" alt="" /></picture>
+        </div>
+      </div>
+    </div>
+    <div></div>
+    <!--섹션 3(PARK)-->
+    <main class="service">
+      <div class="service__header">
+        <h1 class="service__header-title">서비스</h1>
+        <span class="service__header-sub"
+          >일부 서비스는 특정 국가에서만 사용 가능합니다.</span
+        >
+      </div>
+      <section class="service__category">
+        <ul class="service__category-buttonwrapper">
+          <button>All Product</button>
+          <button>커뮤니케이션</button>
+          <button>엔터테인먼트</button>
+          <button>라이프 스타일</button>
+          <button>쇼핑</button>
+          <button>핀테크</button>
+          <button>비즈니스</button>
+          <button>뉴스</button>
+          <button>게임</button>
+        </ul>
+      </section>
+      <section class="service__card-wrapper">
+        <article>
+          <picture><img src="img/service_img.png" alt="" /></picture>
+          <div class="card__textarea">
+            <h2 class="card__textarea-title"></h2>
+            <span class="card__textarea-sub"></span>
+          </div>
+          <span class="more"><i class="ri-more-fill"></i></span>
+
+          <div class="card__linkarea">
+            <button class="card__linkarea-link"></button>
+            <button class="card__linkarea-link"></button>
+            <button class="card__linkarea-link"></button>
+          </div>
+        </article>
+      </section>
+    </main>
   </body>
 </html>
