--- a/LEE/index.html
+++ b/LEE/index.html
@@ -13,25 +13,32 @@
     <script src="index.js" defer></script>
   </head>
   <body>
-    <div class="service">
-      <div class="line_news">
-        <div class="text_area">
-          <h3>LINE NEWS</h3>
-          <span>지금 화제가 되고 있는 <br />글로벌 뉴스</span>
-          <div class="desc">
-            바쁜 일과 중에도 글로벌 이슈를 알고 싶다면 라인 뉴스를 <br />
-            추천합니다. 정치, 경제부터 연예계 소식까지 모든 장르의 뉴스를
-            <br />전하는 라인 뉴스에는 '알고 싶은 정보'가 가득합니다.
+    <section id="mainService">
+      <div class="grid"></div>
+      <div class="service_Cnt">
+        <div class="service">
+          <div class="text_area">
+            <picture class="linkIcon"
+              ><img src="line_news_img.png" alt=""
+            /></picture>
+            <h3>LINE NEWS</h3>
+            <span>지금 화제가 되고 있는 <br />글로벌 뉴스</span>
+            <div class="desc">
+              바쁜 일과 중에도 글로벌 이슈를 알고 싶다면 라인 뉴스를 <br />
+              추천합니다. 정치, 경제부터 연예계 소식까지 모든 장르의 뉴스를
+              <br />전하는 라인 뉴스에는 '알고 싶은 정보'가 가득합니다.
+            </div>
+            <div class="site_link">
+              <i class="ri-external-link-line"></i>자세히 보기
+            </div>
           </div>
-          <div class="site_link">
-            <i class="ri-external-link-line"></i>자세히 보기
+          <div class="image_area">
+            <picture><img src="line_img.png" alt="" /></picture>
           </div>
-        </div>
-        <div class="image_area">
-          <picture><img src="line_img.png" alt="" /></picture>
         </div>
       </div>
-    </div>
+    </section>
+
     <div></div>
   </body>
 </html>
