--- a/PARK/index.html
+++ b/PARK/index.html
@@ -36,8 +36,8 @@
         </ul>
       </section>
       <section class="service__card-wrapper">
-        <article>
-          <picture><img src="img/service_img.png" alt="" /></picture>
+        <article class="service__card">
+          <img src="img/service_img.png" alt="" />
           <div class="card__textarea">
             <h2 class="card__textarea-title"></h2>
             <span class="card__textarea-sub"></span>
