--- a/LEE/index.html
+++ b/LEE/index.html
@@ -14,8 +14,10 @@
   </head>
   <body>
     <section id="mainService">
-      <div class="grid"></div>
-      <div class="service_Cnt">
+      <div class="grid">
+        <span class="dot bottom"></span>
+      </div>
+      <div class="service_Cnt news">
         <div class="service">
           <div class="text_area">
             <picture class="linkIcon"
@@ -33,7 +35,47 @@
             </div>
           </div>
           <div class="image_area">
-            <picture><img src="line_img.png" alt="" /></picture>
+            <picture
+              ><img class="first_img" src="line_img.png" alt=""
+            /></picture>
+          </div>
+        </div>
+      </div>
+
+      <div class="service_Cnt">
+        <div class="service">
+          <div class="image_area">
+            <picture
+              ><img class="second_img" src="line_img2.png" alt=""
+            /></picture>
+          </div>
+          <div class="text_area music">
+            <picture class="linkIcon"
+              ><img src="naver_music.png" alt=""
+            /></picture>
+            <h3>LINE MUSIC</h3>
+            <span>듣다, 보다, 노래하다.</span>
+            <div class="desc">
+              1억 곡 이상의 음악을 언제나 어디서나 편리하게 <br />
+              감상할 수 있습니다. 최신곡은 물론 뮤직비디오 <br />감상, 노래방
+              기능까지 갖추고 있어 음악을 마음껏<br />즐길 수 있습니다.
+            </div>
+            <div class="link_tree">
+              <div class="apple">
+                <a href="https://buly.kr/5JNmpup"
+                  ><i class="ri-apple-fill"></i
+                ></a>
+              </div>
+              <div class="google">
+                <a
+                  href="https://play.google.com/store/apps/details?id=jp.linecorp.linemusic.android"
+                  ><i class="ri-google-play-fill"></i
+                ></a>
+              </div>
+              <div class="site_link">
+                <i class="ri-external-link-line"></i>자세히 보기
+              </div>
+            </div>
           </div>
         </div>
       </div>
