--- a/PARK/index.html
+++ b/PARK/index.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="../reset.css" />
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="css/index.css" />
     <link rel="stylesheet" href="css/service__header.css" />
     <link rel="stylesheet" href="css/service__category.css" />
+    <link rel="stylesheet" href="css/service__card.css" />
     <script src="index.js"></script>
     <link
       href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
@@ -24,32 +25,91 @@
       </div>
       <section class="service__category">
         <ul class="service__category-buttonwrapper">
-          <button>All Product</button>
-          <button>커뮤니케이션</button>
-          <button>엔터테인먼트</button>
-          <button>라이프 스타일</button>
-          <button>쇼핑</button>
-          <button>핀테크</button>
-          <button>비즈니스</button>
-          <button>뉴스</button>
-          <button>게임</button>
+          <button class="service__cartegory-button">All Product</button>
+          <button class="service__cartegory-button">커뮤니케이션</button>
+          <button class="service__cartegory-button">엔터테인먼트</button>
+          <button class="service__cartegory-button">라이프 스타일</button>
+          <button class="service__cartegory-button">쇼핑</button>
+          <button class="service__cartegory-button">핀테크</button>
+          <button class="service__cartegory-button">비즈니스</button>
+          <button class="service__cartegory-button">뉴스</button>
+          <button class="service__cartegory-button">게임</button>
         </ul>
-      </section>
-      <section class="service__card-wrapper">
-        <article class="service__card">
-          <img src="img/service_img.png" alt="" />
-          <div class="card__textarea">
-            <h2 class="card__textarea-title"></h2>
-            <span class="card__textarea-sub"></span>
-          </div>
-          <span class="more"><i class="ri-more-fill"></i></span>
 
-          <div class="card__linkarea">
-            <button class="card__linkarea-link"></button>
-            <button class="card__linkarea-link"></button>
-            <button class="card__linkarea-link"></button>
-          </div>
-        </article>
+        <div class="service__card-wrapper">
+          <article class="service__card">
+            <img src="img/service_img.png" alt="" />
+            <div class="card__textarea">
+              <h2 class="card__textarea-title">LINE</h2>
+              <span class="card__textarea-sub"
+                >사람, 정보, 서비스를 연결하는</span
+              >
+              <span class="card__textarea-sub">커뮤니케이션 앱</span>
+            </div>
+            <span class="card__textarea-more"
+              ><i class="ri-more-fill"></i
+            ></span>
+            <div class="card__linkarea">
+              <a class="card__linkarea-button" href="">
+                <i class="ri-apple-fill"></i> App Store
+              </a>
+              <a class="card__linkarea-button" href="">
+                <i class="ri-google-play-line"></i> Google Play
+              </a>
+              <a class="card__linkarea-button" href="">
+                <i class="ri-mac-line"></i> Desktop
+              </a>
+            </div>
+          </article>
+          <article class="service__card">
+            <img src="img/service_img.png" alt="" />
+            <div class="card__textarea">
+              <h2 class="card__textarea-title">LINE</h2>
+              <span class="card__textarea-sub"
+                >사람, 정보, 서비스를 연결하는</span
+              >
+              <span class="card__textarea-sub">커뮤니케이션 앱</span>
+            </div>
+            <span class="card__textarea-more"
+              ><i class="ri-more-fill"></i
+            ></span>
+            <div class="card__linkarea">
+              <a class="card__linkarea-button" href="">
+                <i class="ri-apple-fill"></i> App Store
+              </a>
+              <a class="card__linkarea-button" href="">
+                <i class="ri-google-play-line"></i> Google Play
+              </a>
+              <a class="card__linkarea-button" href="">
+                <i class="ri-mac-line"></i> Desktop
+              </a>
+            </div>
+          </article>
+          <article class="service__card">
+            <img src="img/service_img.png" alt="" />
+            <div class="card__textarea">
+              <h2 class="card__textarea-title">LINE</h2>
+              <span class="card__textarea-sub"
+                >사람, 정보, 서비스를 연결하는</span
+              >
+              <span class="card__textarea-sub">커뮤니케이션 앱</span>
+            </div>
+            <span class="card__textarea-more"
+              ><i class="ri-more-fill"></i
+            ></span>
+            <div class="card__linkarea">
+              <a class="card__linkarea-button" href="">
+                <i class="ri-apple-fill"></i> App Store
+              </a>
+              <a class="card__linkarea-button" href="">
+                <i class="ri-google-play-line"></i> Google Play
+              </a>
+              <a class="card__linkarea-button" href="">
+                <i class="ri-mac-line"></i> Desktop
+              </a>
+            </div>
+          </article>
+        </div>
       </section>
     </main>
   </body>
