--- a/SON/index.html
+++ b/SON/index.html
@@ -17,15 +17,13 @@
         <h1>
           <a href="">
             <div
-              class="onlyPc image-warpper"
+              class="onlyPc image-wrapper"
               style="
                 position: relative;
                 overflow: hidden;
                 display: inline-block;
                 width: 43px;
-                height: 16px;
-              "
-            >
+                height: 16px;">
               <img
                 style="
                   position: absolute;
@@ -41,7 +39,7 @@
                 alt=""
               />
             </div>
-            <div
+            <!-- <div
               class="onlySp image-warpper"
               style="
                 position: relative;
@@ -51,8 +49,8 @@
                 height: 14px;
               "
             >
-              <!-- <img src="img/라인 로고.png" alt="" /> -->
-            </div>
+              <img src="img/라인 로고.png" alt="" />
+            </div> -->
           </a>
         </h1>
         <!-- 1 nav Life on LINE 커뮤니케이션 서비스 버튼 -->
@@ -68,12 +66,36 @@
         <!-- 2 현재 언어+ 로고-->
         <ul class="langMenuTop fonL">
           <li class="iconLang onlyPc">
-            <div class="image-warpper" style="position: relative; overflow: hidden; display:inline-block;width: 20px;height: 20px;">
-              <img aria-hidden="true" src="img/langIcon.png" alt style="position: absolute; top:0px; left:0px; width:100%; height:100%; object-fit: cover; object-position: center center; opacity: 0; transition-delay: 500ms;">
+            <div
+              class="image-warpper"
+              style="
+                position: relative;
+                overflow: hidden;
+                display: inline-block;
+                width: 20px;
+                height: 20px;
+              "
+            >
+              <img
+                aria-hidden="true"
+                src="img/langIcon.png"
+                alt
+                style="
+                  position: absolute;
+                  top: 0px;
+                  left: 0px;
+                  width: 100%;
+                  height: 100%;
+                  object-fit: cover;
+                  object-position: center center;
+                  opacity: 1;
+                  transition-delay: 500ms;
+                "
+              />
             </div>
           </li>
           <li class="iconLang onlySp"></li>
-          <li class="currentLang"></li>
+          <li class="currentLang">KR</li>
         </ul>
         <!--3 언어 선택하는 박스 있는 곳 -->
         <ul class="fonL langMenu show">
