--- a/LEE/index.html
+++ b/LEE/index.html
@@ -10,18 +10,20 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="communication.css" />
+    <link rel="stylesheet" href="footer.css" />
     <script src="index.js" defer></script>
   </head>
   <body>
     <section id="mainService">
       <div class="grid">
-        <span class="dot bottom"></span>
+        <span class="dot bottom">・</span>
       </div>
       <div class="service_Cnt news">
         <div class="service">
           <div class="text_area">
             <picture class="linkIcon"
-              ><img src="line_news_img.png" alt=""
+              ><img src="../LEE/image/line_news_img.png" alt=""
             /></picture>
             <h3>LINE NEWS</h3>
             <span>지금 화제가 되고 있는 <br />글로벌 뉴스</span>
@@ -36,7 +38,7 @@
           </div>
           <div class="image_area">
             <picture
-              ><img class="first_img" src="line_img.png" alt=""
+              ><img class="first_img" src="../LEE/image/line_img.png" alt=""
             /></picture>
           </div>
         </div>
@@ -46,12 +48,12 @@
         <div class="service">
           <div class="image_area">
             <picture
-              ><img class="second_img" src="line_img2.png" alt=""
+              ><img class="second_img" src="../LEE/image/line_img2.png" alt=""
             /></picture>
           </div>
           <div class="text_area music">
             <picture class="linkIcon"
-              ><img src="naver_music.png" alt=""
+              ><img src="../LEE/image/naver_music.png" alt=""
             /></picture>
             <h3>LINE MUSIC</h3>
             <span>듣다, 보다, 노래하다.</span>
@@ -80,7 +82,115 @@
         </div>
       </div>
     </section>
-
+    <section id="communication">
+      <div class="main_sub">
+        <h2 class="main_title">커뮤니케이션 앱</h2>
+        <p class="sub_text">
+          언제 어디서나 무료로 메세지를 보내고, 깨끗한 음질로 24시간 자유롭게
+          무료 통화가<br />가능한 새로운 커뮤니케이션 앱입니다.
+        </p>
+        <ul class="contentsList">
+          <li class="content box">
+            <img src="image/content1.png" alt="" />
+            <h3 class="onlyPc">대화, 음성통화, 영상통화</h3>
+            <div>
+              라인 유저라면 1:1은 물론 그룹을 만들어서 대화,<br />음성통화,
+              영상통화를 이용할 수 있습니다.
+            </div>
+          </li>
+          <li class="content box">
+            <img src="image/content2.png" alt="" />
+            <h3 class="onlyPc">스티커, 이모티콘, 테마</h3>
+            <div>
+              대화방에서 마음을 전할 수 있는 다양한 스티커와<br />이모티콘,
+              개성을 표현할 수 있는 테마로 나만의 맞춤형<br />서비스를 이용할 수
+              있습니다.
+            </div>
+          </li>
+          <li class="content solo">
+            <img src="image/content3.png" alt="" />
+            <h3 class="onlyPc">오픈챗</h3>
+            <div>일상이나 관심사를 공유하고 정보를 나눌 수 있습니다.</div>
+          </li>
+          <li class="content box">
+            <img src="image/content4.png" alt="" />
+            <h3 class="onlyPc">홈 탭</h3>
+            <div>
+              라인의 각종 서비스 및 스티커와 같은 다양한 정보와<br />콘텐츠를
+              확인할 수 있습니다.
+            </div>
+          </li>
+          <li class="content box">
+            <img src="image/content5.png" alt="" />
+            <h3 class="onlyPc">LINE VOOM</h3>
+            <div>
+              LINE VOOM에서 취향에 맞는 계정을 팔로우하고,<br />멋진 동영상,
+              사진, 게시글을 만나보세요.
+            </div>
+          </li>
+          <li class="content">
+            <img src="image/content6.png" alt="" />
+            <h3 class="onlyPc">월렛 탭</h3>
+            <div>
+              송금이나 결제 등 ‘라인 페이’ 서비스 외에도 다양한<br />금융
+              서비스를 이용할 수 있습니다.
+            </div>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <section class="singleBanner">
+      <div class="Corporate_support">
+        <div class="bannerTxt">기업 지원</div>
+        <img src="image/Corporate support.png" alt="" />
+      </div>
+    </section>
+    <footer class="ko">
+      <div class="downloadLinks">
+        <ul>
+          <li><img src="image/icon-line_1.png" alt="" /></li>
+          <li>
+            <a
+              href="https://apps.apple.com/kr/app/%EB%9D%BC%EC%9D%B8-line/id443904275"
+              ><i class="ri-apple-fill"></i>App Store</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://play.google.com/store/apps/details?id=jp.naver.line.android"
+              ><i class="ri-google-play-fill"></i>Google Play</a
+            >
+          </li>
+          <li>
+            <a href="https://desktop.line-scdn.net/win/new/LineInst.exe"
+              ><i class="ri-computer-line"></i>Desktop</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://apps.microsoft.com/detail/xpfcc4cd725961?hl=ko-KR&gl=KR"
+              ><i class="ri-windows-fill"></i>Window Store</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://chromewebstore.google.com/detail/line/ophjlpahpchlmihnnnihgmmeilfjmjjc?utm_source=chrome-ntp-icon&pli=1"
+            ></a>
+            Chrome
+          </li>
+          <li>
+            <a
+              href="https://line-android-universal-download.line-scdn.net/line-apk-download.html"
+            ></a>
+            APK
+          </li>
+          <li>
+            <a href="https://www.line.me/ko/download/screen-saver"></a>Screen
+            Saver
+          </li>
+        </ul>
+      </div>
+    </footer>
     <div></div>
   </body>
 </html>
