--- a/LEE/index.html
+++ b/LEE/index.html
@@ -15,66 +15,66 @@
     <script src="index.js" defer></script>
   </head>
   <body>
-    <section id="mainService">
-      <div class="grid">
-        <span class="dot bottom">・</span>
+    <section id="LmainService">
+      <div class="Lgrid">
+        <span class="Ldot bottom">・</span>
       </div>
-      <div class="service_Cnt news">
-        <div class="service">
-          <div class="text_area">
-            <picture class="linkIcon"
+      <div class="Lservice_Cnt news">
+        <div class="Lservice">
+          <div class="Ltext_area">
+            <picture class="LlinkIcon"
               ><img src="../LEE/image/line_news_img.png" alt=""
             /></picture>
             <h3>LINE NEWS</h3>
             <span>지금 화제가 되고 있는 <br />글로벌 뉴스</span>
-            <div class="desc">
+            <div class="Ldesc">
               바쁜 일과 중에도 글로벌 이슈를 알고 싶다면 라인 뉴스를 <br />
               추천합니다. 정치, 경제부터 연예계 소식까지 모든 장르의 뉴스를
               <br />전하는 라인 뉴스에는 '알고 싶은 정보'가 가득합니다.
             </div>
-            <div class="site_link">
+            <div class="Lsite_link">
               <i class="ri-external-link-line"></i>자세히 보기
             </div>
           </div>
-          <div class="image_area">
+          <div class="Limage_area">
             <picture
-              ><img class="first_img" src="../LEE/image/line_img.png" alt=""
+              ><img class="Lfirst_img" src="../LEE/image/line_img.png" alt=""
             /></picture>
           </div>
         </div>
       </div>
 
-      <div class="service_Cnt">
-        <div class="service">
-          <div class="image_area">
+      <div class="Lservice_Cnt">
+        <div class="Lservice">
+          <div class="Limage_area">
             <picture
-              ><img class="second_img" src="../LEE/image/line_img2.png" alt=""
+              ><img class="Lsecond_img" src="../LEE/image/line_img2.png" alt=""
             /></picture>
           </div>
-          <div class="text_area music">
-            <picture class="linkIcon"
+          <div class="Ltext_area music">
+            <picture class="LlinkIcon"
               ><img src="../LEE/image/naver_music.png" alt=""
             /></picture>
             <h3>LINE MUSIC</h3>
             <span>듣다, 보다, 노래하다.</span>
-            <div class="desc">
+            <div class="Ldesc">
               1억 곡 이상의 음악을 언제나 어디서나 편리하게 <br />
               감상할 수 있습니다. 최신곡은 물론 뮤직비디오 <br />감상, 노래방
               기능까지 갖추고 있어 음악을 마음껏<br />즐길 수 있습니다.
             </div>
-            <div class="link_tree">
-              <div class="apple">
+            <div class="Llink_tree">
+              <div class="Lapple">
                 <a href="https://buly.kr/5JNmpup"
                   ><i class="ri-apple-fill"></i
                 ></a>
               </div>
-              <div class="google">
+              <div class="Lgoogle">
                 <a
                   href="https://play.google.com/store/apps/details?id=jp.linecorp.linemusic.android"
                   ><i class="ri-google-play-fill"></i
                 ></a>
               </div>
-              <div class="site_link">
+              <div class="Lsite_link">
                 <i class="ri-external-link-line"></i>자세히 보기
               </div>
             </div>
@@ -82,55 +82,55 @@
         </div>
       </div>
     </section>
-    <section id="communication">
-      <div class="main_sub">
-        <h2 class="main_title">커뮤니케이션 앱</h2>
-        <p class="sub_text">
+    <section id="Lcommunication">
+      <div class="Lmain_sub">
+        <h2 class="Lmain_title">커뮤니케이션 앱</h2>
+        <p class="Lsub_text">
           언제 어디서나 무료로 메세지를 보내고, 깨끗한 음질로 24시간 자유롭게
           무료 통화가<br />가능한 새로운 커뮤니케이션 앱입니다.
         </p>
-        <ul class="contentsList">
-          <li class="content box">
+        <ul class="LcontentsList">
+          <li class="Lcontent box">
             <img src="image/content1.png" alt="" />
-            <h3 class="onlyPc">대화, 음성통화, 영상통화</h3>
+            <h3 class="LonlyPc">대화, 음성통화, 영상통화</h3>
             <div>
               라인 유저라면 1:1은 물론 그룹을 만들어서 대화,<br />음성통화,
               영상통화를 이용할 수 있습니다.
             </div>
           </li>
-          <li class="content box">
+          <li class="Lcontent box">
             <img src="image/content2.png" alt="" />
-            <h3 class="onlyPc">스티커, 이모티콘, 테마</h3>
+            <h3 class="LonlyPc">스티커, 이모티콘, 테마</h3>
             <div>
               대화방에서 마음을 전할 수 있는 다양한 스티커와<br />이모티콘,
               개성을 표현할 수 있는 테마로 나만의 맞춤형<br />서비스를 이용할 수
               있습니다.
             </div>
           </li>
-          <li class="content solo">
+          <li class="Lcontent solo">
             <img src="image/content3.png" alt="" />
-            <h3 class="onlyPc">오픈챗</h3>
+            <h3 class="LonlyPc">오픈챗</h3>
             <div>일상이나 관심사를 공유하고 정보를 나눌 수 있습니다.</div>
           </li>
-          <li class="content box">
+          <li class="Lcontent box">
             <img src="image/content4.png" alt="" />
-            <h3 class="onlyPc">홈 탭</h3>
+            <h3 class="LonlyPc">홈 탭</h3>
             <div>
               라인의 각종 서비스 및 스티커와 같은 다양한 정보와<br />콘텐츠를
               확인할 수 있습니다.
             </div>
           </li>
-          <li class="content box">
+          <li class="Lcontent box">
             <img src="image/content5.png" alt="" />
-            <h3 class="onlyPc">LINE VOOM</h3>
+            <h3 class="LonlyPc">LINE VOOM</h3>
             <div>
               LINE VOOM에서 취향에 맞는 계정을 팔로우하고,<br />멋진 동영상,
               사진, 게시글을 만나보세요.
             </div>
           </li>
-          <li class="content">
+          <li class="Lcontent">
             <img src="image/content6.png" alt="" />
-            <h3 class="onlyPc">월렛 탭</h3>
+            <h3 class="LonlyPc">월렛 탭</h3>
             <div>
               송금이나 결제 등 ‘라인 페이’ 서비스 외에도 다양한<br />금융
               서비스를 이용할 수 있습니다.
@@ -139,14 +139,14 @@
         </ul>
       </div>
     </section>
-    <section class="singleBanner">
-      <div class="Corporate_support">
-        <div class="bannerTxt">기업 지원</div>
+    <section class="LsingleBanner">
+      <div class="LCorporate_support">
+        <div class="LbannerTxt">기업 지원</div>
         <img src="image/Corporate support.png" alt="" />
       </div>
     </section>
-    <footer class="ko">
-      <div class="downloadLinks">
+    <footer class="Lko">
+      <div class="LdownloadLinks">
         <ul>
           <li><img src="image/icon-line_1.png" alt="" /></li>
           <li>
