--- a/SON/index.html
+++ b/SON/index.html
@@ -132,25 +132,17 @@
           <div class="SmainTitle">Life on LINE</div>
           <div class="SmvSubText">라인은 언제나 사용자와 함께 합니다.</div>
           <div class="SmvDownload">
-            <div class="SmvDownloadText onlyPc">
-              <div
-                class="SmvDownloadicon image-wrapper"
-                style="
-                  position: relative;
-                  display: inline-block;
-                  width: 25px;
-                  height: 24px;
-                "
-              >
-                <img src="img/라인 말풍선.png" alt="" />
-                <p>다운로드</p>
-              </div>
+            <div class="SiconText">
+              <img src="img/라인 말풍선.png" alt="" />
+              <p>다운로드</p>
             </div>
-            <ul class="downloadWrapper">
-              <li class="SdownloadeButton"><i class="ri-apple-fill"></i></li>
-              <li class="SdownloadeButton"><i class="ri-google-play-fill"></i></li>
-              <li class="SdownloadeButton"><i class="ri-tv-2-line"></i></li>
-            </ul>
+            <div class="SdownloadBtnList">
+              <div class="SdownloadBtn"><i class="ri-apple-fill"></i></div>
+              <div class="SdownloadBtn">
+                <i class="ri-google-play-fill"></i>
+              </div>
+              <div class="SdownloadBtn"><i class="ri-tv-2-line"></i></div>
+            </div>
           </div>
         </div>
         <img src="img/hero1.jpg" alt="" />
