--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="SON/index.js" defer></script>
     <!--LEE-->
     <link rel="stylesheet" href="LEE/index.css" />
+    <link rel="stylesheet" href="LEE/communication.css" />
     <script src="LEE/index.js" defer></script>
     <!--PARK-->
     <link rel="stylesheet" href="PARK/css/index.css" />
@@ -25,13 +26,13 @@
   </head>
   <body>
     <!--로딩 화면(SON)-->
-    <header class="ko">
+    <header class="Sko">
       <div>
         <!-- 라인 로고 -->
         <h1>
           <a href="">
             <div
-              class="onlyPc image-warpper"
+              class="onlyPc image-wrapper"
               style="
                 position: relative;
                 overflow: hidden;
@@ -65,25 +66,25 @@
                 height: 14px;
               "
             >
-              <!-- <img src="img/라인 로고.png" alt="" /> -->
+              <img src="SON/img/라인 로고.png" alt="" />
             </div>
           </a>
         </h1>
         <!-- 1 nav Life on LINE 커뮤니케이션 서비스 버튼 -->
-        <ul class="headerMenu onlyPc">
+        <ul class="SheaderMenu onlyPc">
           <li><a href="">Life on LINE</a></li>
           <li><a href="">커뮤니케이션 앱</a></li>
           <li><a href="">서비스</a></li>
           <li
-            class="currentLine"
+            class="ScurrentLine"
             style="left: 0px; width: 93px; transition: none"
           ></li>
         </ul>
         <!-- 2 현재 언어+ 로고-->
-        <ul class="langMenuTop fonL">
+        <ul class="SlangMenuTop fonL">
           <li class="iconLang onlyPc">
             <div
-              class="image-warpper"
+              class="Simage-warpper"
               style="
                 position: relative;
                 overflow: hidden;
@@ -104,109 +105,131 @@
                   height: 100%;
                   object-fit: cover;
                   object-position: center center;
-                  opacity: 0;
+                  opacity: 1;
                   transition-delay: 500ms;
                 "
               />
             </div>
           </li>
-          <li class="iconLang onlySp"></li>
-          <li class="currentLang"></li>
+          <li class="SiconLang onlySp"></li>
+          <li class="ScurrentLang">KR</li>
         </ul>
         <!--3 언어 선택하는 박스 있는 곳 -->
-        <ul class="fonL langMenu show">
-          <li class="otherLang">
+        <ul class="SlangMenu Sshow">
+          <li class="SotherLang">
             <a href="">EN</a>
           </li>
-          <li class="otherLang">
+          <li class="SotherLang">
             <a href="">JP</a>
           </li>
-          <li class="current otherLang">
+          <li class="Scurrent SotherLang">
             <a href="">KR</a>
           </li>
-          <li class="otherLang">
+          <li class="SotherLang">
             <a href="">TW</a>
           </li>
-          <li class="otherLang">
+          <li class="SotherLang">
             <a href="">TH</a>
           </li>
-          <li class="otherLang">
+          <li class="SotherLang">
             <a href="">ID</a>
           </li>
         </ul>
       </div>
     </header>
     <main>
-      <div class="mvArea">
-        <div class="mvText">
-          <div class="fontL mainTitle">Life on LINE</div>
-          <div class="mvSubText">라인은 언제나 사용자와 함께 합니다.</div>
-          <div class="mvDownload"></div>
+      <div class="SmvArea">
+        <div class="SmvText">
+          <div class="SmainTitle">Life on LINE</div>
+          <div class="SmvSubText">라인은 언제나 사용자와 함께 합니다.</div>
+          <div class="SmvDownload">
+            <div class="SmvDownloadText onlyPc">
+              <div
+                class="SmvDownloadicon image-wrapper"
+                style="
+                  position: relative;
+                  display: inline-block;
+                  width: 25px;
+                  height: 24px;
+                "
+              >
+                <img src="SON/img/라인 말풍선.png" alt="" />
+                <p>다운로드</p>
+              </div>
+            </div>
+            <ul class="downloadWrapper">
+              <li class="SdownloadeButton"><i class="ri-apple-fill"></i></li>
+              <li class="SdownloadeButton">
+                <i class="ri-google-play-fill"></i>
+              </li>
+              <li class="SdownloadeButton"><i class="ri-tv-2-line"></i></li>
+            </ul>
+          </div>
         </div>
         <img src="SON/img/hero1.jpg" alt="" />
       </div>
     </main>
     <!--섹션 2(LEE)-->
-    <section id="mainService">
-      <div class="grid">
-        <span class="dot bottom"></span>
+    <section id="LmainService">
+      <div class="Lgrid">
+        <span class="Ldot bottom">・</span>
       </div>
-      <div class="service_Cnt news">
-        <div class="service">
-          <div class="text_area">
-            <picture class="linkIcon"
-              ><img src="LEE/line_news_img.png" alt=""
+      <div class="Lservice_Cnt news">
+        <div class="Lservice">
+          <div class="Ltext_area">
+            <picture class="LlinkIcon"
+              ><img src="LEE/image/line_news_img.png" alt=""
             /></picture>
             <h3>LINE NEWS</h3>
             <span>지금 화제가 되고 있는 <br />글로벌 뉴스</span>
-            <div class="desc">
+            <div class="Ldesc">
               바쁜 일과 중에도 글로벌 이슈를 알고 싶다면 라인 뉴스를 <br />
               추천합니다. 정치, 경제부터 연예계 소식까지 모든 장르의 뉴스를
               <br />전하는 라인 뉴스에는 '알고 싶은 정보'가 가득합니다.
             </div>
-            <div class="site_link">
+            <div class="Lsite_link">
               <i class="ri-external-link-line"></i>자세히 보기
             </div>
           </div>
-          <div class="image_area">
+          <div class="Limage_area">
             <picture
-              ><img class="first_img" src="LEE/line_img.png" alt=""
+              ><img class="Lfirst_img" src="LEE/image/line_img.png" alt=""
             /></picture>
           </div>
         </div>
       </div>
 
-      <div class="service_Cnt">
-        <div class="service">
-          <div class="image_area">
+      <div class="Lservice_Cnt">
+        <div class="Lservice">
+          <div class="Limage_area">
             <picture
-              ><img class="second_img" src="LEE/line_img2.png" alt=""
+              ><img class="Lsecond_img" src="LEE/image/line_img2.png" alt=""
             /></picture>
           </div>
-          <div class="text_area music">
-            <picture class="linkIcon"
-              ><img src="LEE/naver_music.png" alt=""
+          <div class="Ltext_area music">
+            <picture class="LlinkIcon"
+              ><img src="LEE/image/naver_music.png" alt=""
             /></picture>
             <h3>LINE MUSIC</h3>
             <span>듣다, 보다, 노래하다.</span>
-            <div class="desc">
+            <div class="Ldesc">
               1억 곡 이상의 음악을 언제나 어디서나 편리하게 <br />
               감상할 수 있습니다. 최신곡은 물론 뮤직비디오 <br />감상, 노래방
               기능까지 갖추고 있어 음악을 마음껏<br />즐길 수 있습니다.
             </div>
-            <div class="link_tree">
-              <div class="apple">
+            <div class="Llink_tree">
+              <div class="Lapple">
                 <a href="https://buly.kr/5JNmpup"
                   ><i class="ri-apple-fill"></i
                 ></a>
               </div>
-              <div class="google">
+              <div class="Lgoogle">
                 <a
                   href="https://play.google.com/store/apps/details?id=jp.linecorp.linemusic.android"
                   ><i class="ri-google-play-fill"></i
                 ></a>
               </div>
-              <div class="site_link">
+              <div class="Lsite_link">
                 <i class="ri-external-link-line"></i>자세히 보기
               </div>
             </div>
@@ -214,7 +237,69 @@
         </div>
       </div>
     </section>
-
+    <section id="Lcommunication">
+      <div class="Lmain_sub">
+        <h2 class="Lmain_title">커뮤니케이션 앱</h2>
+        <p class="Lsub_text">
+          언제 어디서나 무료로 메세지를 보내고, 깨끗한 음질로 24시간 자유롭게
+          무료 통화가<br />가능한 새로운 커뮤니케이션 앱입니다.
+        </p>
+        <ul class="LcontentsList">
+          <li class="Lcontent box">
+            <img src="LEE/image/content1.png" alt="" />
+            <h3 class="LonlyPc">대화, 음성통화, 영상통화</h3>
+            <div>
+              라인 유저라면 1:1은 물론 그룹을 만들어서 대화,<br />음성통화,
+              영상통화를 이용할 수 있습니다.
+            </div>
+          </li>
+          <li class="Lcontent box">
+            <img src="LEE/image/content2.png" alt="" />
+            <h3 class="LonlyPc">스티커, 이모티콘, 테마</h3>
+            <div>
+              대화방에서 마음을 전할 수 있는 다양한 스티커와<br />이모티콘,
+              개성을 표현할 수 있는 테마로 나만의 맞춤형<br />서비스를 이용할 수
+              있습니다.
+            </div>
+          </li>
+          <li class="Lcontent solo">
+            <img src="LEE/image/content3.png" alt="" />
+            <h3 class="LonlyPc">오픈챗</h3>
+            <div>일상이나 관심사를 공유하고 정보를 나눌 수 있습니다.</div>
+          </li>
+          <li class="Lcontent box">
+            <img src="LEE/image/content4.png" alt="" />
+            <h3 class="LonlyPc">홈 탭</h3>
+            <div>
+              라인의 각종 서비스 및 스티커와 같은 다양한 정보와<br />콘텐츠를
+              확인할 수 있습니다.
+            </div>
+          </li>
+          <li class="Lcontent box">
+            <img src="LEE/image/content5.png" alt="" />
+            <h3 class="LonlyPc">LINE VOOM</h3>
+            <div>
+              LINE VOOM에서 취향에 맞는 계정을 팔로우하고,<br />멋진 동영상,
+              사진, 게시글을 만나보세요.
+            </div>
+          </li>
+          <li class="Lcontent">
+            <img src="LEE/image/content6.png" alt="" />
+            <h3 class="LonlyPc">월렛 탭</h3>
+            <div>
+              송금이나 결제 등 ‘라인 페이’ 서비스 외에도 다양한<br />금융
+              서비스를 이용할 수 있습니다.
+            </div>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <section class="LsingleBanner">
+      <div class="LCorporate_support">
+        <div class="LbannerTxt">기업 지원</div>
+        <img src="LEE/image/Corporate support.png" alt="" />
+      </div>
+    </section>
     <div></div>
     <!--섹션 3(PARK)-->
     <main class="service">
@@ -313,5 +398,51 @@
         </div>
       </section>
     </main>
+    <footer class="Lko">
+      <div class="LdownloadLinks">
+        <ul>
+          <li><img src="LEE/image/icon-line_1.png" alt="" /></li>
+          <li>
+            <a
+              href="https://apps.apple.com/kr/app/%EB%9D%BC%EC%9D%B8-line/id443904275"
+              ><i class="ri-apple-fill"></i>App Store</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://play.google.com/store/apps/details?id=jp.naver.line.android"
+              ><i class="ri-google-play-fill"></i>Google Play</a
+            >
+          </li>
+          <li>
+            <a href="https://desktop.line-scdn.net/win/new/LineInst.exe"
+              ><i class="ri-computer-line"></i>Desktop</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://apps.microsoft.com/detail/xpfcc4cd725961?hl=ko-KR&gl=KR"
+              ><i class="ri-windows-fill"></i>Window Store</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://chromewebstore.google.com/detail/line/ophjlpahpchlmihnnnihgmmeilfjmjjc?utm_source=chrome-ntp-icon&pli=1"
+            ></a>
+            Chrome
+          </li>
+          <li>
+            <a
+              href="https://line-android-universal-download.line-scdn.net/line-apk-download.html"
+            ></a>
+            APK
+          </li>
+          <li>
+            <a href="https://www.line.me/ko/download/screen-saver"></a>Screen
+            Saver
+          </li>
+        </ul>
+      </div>
+    </footer>
   </body>
 </html>
