--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 alt=""
               />
             </div>
-            <div
+            <!-- <div
               class="onlySp image-warpper"
               style="
                 position: relative;
@@ -66,8 +66,8 @@
                 height: 14px;
               "
             >
-              <img src="SON/img/라인 로고.png" alt="" />
-            </div>
+              <img src="img/라인 로고.png" alt="" />
+            </div> -->
           </a>
         </h1>
         <!-- 1 nav Life on LINE 커뮤니케이션 서비스 버튼 -->
@@ -143,27 +143,17 @@
           <div class="SmainTitle">Life on LINE</div>
           <div class="SmvSubText">라인은 언제나 사용자와 함께 합니다.</div>
           <div class="SmvDownload">
-            <div class="SmvDownloadText onlyPc">
-              <div
-                class="SmvDownloadicon image-wrapper"
-                style="
-                  position: relative;
-                  display: inline-block;
-                  width: 25px;
-                  height: 24px;
-                "
-              >
-                <img src="SON/img/라인 말풍선.png" alt="" />
-                <p>다운로드</p>
-              </div>
+            <div class="SiconText">
+              <img src="SON/img/라인 말풍선.png" alt="" />
+              <p>다운로드</p>
             </div>
-            <ul class="downloadWrapper">
-              <li class="SdownloadeButton"><i class="ri-apple-fill"></i></li>
-              <li class="SdownloadeButton">
+            <div class="SdownloadBtnList">
+              <div class="SdownloadBtn"><i class="ri-apple-fill"></i></div>
+              <div class="SdownloadBtn">
                 <i class="ri-google-play-fill"></i>
-              </li>
-              <li class="SdownloadeButton"><i class="ri-tv-2-line"></i></li>
-            </ul>
+              </div>
+              <div class="SdownloadBtn"><i class="ri-tv-2-line"></i></div>
+            </div>
           </div>
         </div>
         <img src="SON/img/hero1.jpg" alt="" />
