--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Line | 라인은 언제나 사용자와 함께 합니다.</title>
     <link rel="stylesheet" href="reset.css" />
     <!--SON-->
     <link rel="stylesheet" href="SON/index.css" />
@@ -27,9 +27,9 @@
   <body>
     <!--로딩 화면(SON)-->
     <header class="Sko">
-      <div>
+      <div class="Sko-box">
         <!-- 라인 로고 -->
-        <h1>
+        <h1 class="Sko-bbox">
           <a href="">
             <div
               class="onlyPc image-wrapper"
