--- a/LEE/index.html
+++ b/LEE/index.html
@@ -175,19 +175,42 @@
           <li>
             <a
               href="https://chromewebstore.google.com/detail/line/ophjlpahpchlmihnnnihgmmeilfjmjjc?utm_source=chrome-ntp-icon&pli=1"
-            ></a>
-            Chrome
+              >Chrome</a
+            >
           </li>
           <li>
             <a
               href="https://line-android-universal-download.line-scdn.net/line-apk-download.html"
-            ></a>
-            APK
+              >APK</a
+            >
           </li>
           <li>
-            <a href="https://www.line.me/ko/download/screen-saver"></a>Screen
-            Saver
+            <a href="https://www.line.me/ko/download/screen-saver"
+              >Screen Saver</a
+            >
           </li>
+        </ul>
+      </div>
+      <div class="LexternalLinks">
+        <p class="Lcopyright">©️ LY Corporation</p>
+        <ul class="LfooterLinks">
+          <li><a href="https://help.line.me/line/?lang=ko">도움말</a></li>
+          <li>
+            <a href="https://terms.line.me/line_terms/?lang=ko">이용약관</a>
+          </li>
+          <li>
+            <a href="https://line.me/ko/terms/policy/">개인정보 처리방침</a>
+          </li>
+          <li>
+            <a href="https://terms.line.me/line_youthprotectionpolicy?lang=ko"
+              >청소년 보호 정책</a
+            >
+          </li>
+        </ul>
+        <ul class="LsnsLink">
+          <a class="Lyoutube" href="https://www.youtube.com/user/LineAppGlobal"
+            ><i class="ri-youtube-fill"></i
+          ></a>
         </ul>
       </div>
     </footer>
