--- a/index.html
+++ b/index.html
@@ -151,9 +151,7 @@
             </div>
             <div class="SdownloadBtnList">
               <div class="SdownloadBtn"><i class="ri-apple-fill"></i></div>
-              <div class="SdownloadBtn">
-                <i class="ri-google-play-fill"></i>
-              </div>
+              <div class="SdownloadBtn"><i class="ri-google-play-fill"></i></div>
               <div class="SdownloadBtn"><i class="ri-tv-2-line"></i></div>
             </div>
           </div>
